--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https:'"
+                onclick="location.href='https://santhoshmahendran.github.io/personal-blog-website/'"
               >
                 Github
               </button>
